remove readme note from previous iteration
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>